verif/test/deca/context/invalid/object/non-class-object-verif.res
src/test/deca/context/invalid/object/non-class-object.deca:9:31: Method call must be performed on an object of a class type.
